# MyAIBOX

./: .dockerignore  .env.example  .gitignore  README.md  agentcore_app.py  app.py  my-aibox.service  pyproject.toml  requirements-agentcore.txt  requirements.txt  run.sh
.bedrock_agentcore/my_aibox_agent/: Dockerfile
.kiro/settings/: lsp.json
api/: __init__.py  asking.py  assistant.py  auth.py  draw.py  persona.py  settings.py  summary.py  text.py  upload.py  vision.py
api/prompts/: asking.py  assistant.py  text.py
backend/api/: asking.py  assistant.py  auth.py  chat.py  draw.py  persona.py  settings.py  summary.py  talk.py  text.py  transcribe.py  upload.py  vision.py
backend/common/: auth.py  cli.py  logger.py  sso.py
backend/core/: agent_context.py  chat_agents.py  config.py  module_config.py  skills.py  talk_agents.py  workspace.py
backend/tests/: conftest.py
backend/utils/: __init__.py  aws.py  bedrock.py  file.py  web.py
common/: async_stream.py  auth.py  cli.py  logger.py  main_ui.py  provider_cache.py  spa.py
common/login/: __init__.py  login.html
common/setting/: handler_account.py  handler_tools.py  models.py  modules.py  tab_account.py  tab_model.py  tab_module.py  tab_tools.py  ui.py
core/: auth.py  config.py  module_config.py
core/service/: __init__.py  agent_service.py  chat_service.py  creative_service.py  draw_service.py  gen_service.py  service_factory.py
core/session/: store.py
deploy/: build-push.sh  my-aibox.service
deploy/agentcore/: agentcore-deploy.sh  deployment-guide.md
deploy/full-stack/: .dockerignore  Dockerfile  build-push.sh
docs/: architecture_and_dataflow.md  bedrock-reasoning-models.md  tool-system-architecture.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  pcm-worklet.js
frontend/src/: App.tsx  auth.ts  index.css  vite-env.d.ts
genai/agents/: agent_provider.py  agentcore_client.py  chunk_builder.py  custom_models.py  provider.py  resp_format.py  strands_agent.py
genai/models/: __init__.py  model_list.py  model_manager.py
genai/tools/: __init__.py  provider.py  tool_manager.py  tool_provider.py  tools_registry.py
llm/api_providers/: __init__.py  google_gemini.py
modules/: __init__.py
modules/asking/: handlers.py  ui.py
modules/assistant/: handlers.py  prompts.py  ui.py
modules/chatbot/: handlers.py  ui.py
modules/coding/: handlers.py
modules/deepsearch/: handlers.py  prompts.py  ui.py
modules/draw/: handlers.py
modules/persona/: handlers.py  ui.py  (+1 more)
tests/: conftest.py  run_all_service_tests.py  test_agent_provider_full.py  test_agent_service.py  test_agent_tool_use_status.py  test_async_generators.py  test_auth.py  test_chat_service.py  test_claude_reasoning_tool_use.py  test_creative_service.py  test_debug_events.py  test_deepsearch_module.py  test_draw_service.py  test_exa_server.py  test_gemini_provider.py  test_gen_service.py  test_legacy_tools.py  test_llm_strands_tools_basic.py  test_search_wikipedia_tool.py  test_strands_tools_integration.py  test_text_module.py  test_tool_provider.py
utils/: __init__.py  aws.py  bedrock.py  file.py  voice.py  web.py
webui/: main.py  styles.css
(+208 files in other folders)
