[project]
name = "my-aibox"
version = "2.0.0"
description = "MyAIBOX(AI百宝箱) - A comprehensive Gen-AI application suite built with FastAPI and Gradio"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Fundamental
    "fastapi>=0.100.0",
    "gradio>=5.0.0",
    "gradio_pdf>=0.0.22",
    "boto3>=1.28.0",
    "google-genai>=1.7.0",
    "openai>=1.0.0",
    
    # MCP Tools
    "strands-agents",
    
    # Utilities
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.2",
    "cachetools>=5.3.0",
    "aiohttp>=3.8.5",
    "wikipedia>=1.4.0",
    "googlesearch-python>=1.2.3",
]

[tool.uv]
# uv specific configurations can be added here
