[project]
name = "my-aibox"
version = "3.0.0"
description = "MyAIBOX(AI百宝箱) - A comprehensive Gen-AI application suite built with FastAPI and Gradio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Fundamental
    "fastapi>=0.100.0",
    "gradio>=6.2.0",
    "gradio_pdf>=0.0.22",
    "boto3>=1.28.0",
    "google-genai>=1.7.0",
    "openai>=1.0.0",
    # Strands Agents
    "strands-agents>=1.20.0",
    "strands-agents-tools>=0.1.7",
    # AgentCore Runtime
    "bedrock-agentcore>=1.1.0",
    # Utilities
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.2",
    "cachetools>=5.3.0",
    "aiohttp>=3.8.5",
    "wikipedia>=1.4.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.6.0",
    "ag-ui-protocol>=0.1.13",
]

[tool.setuptools.packages.find]
include = ["core*", "genai*", "webui*", "common*", "utils*"]
exclude = ["tests*", "logs*", "tmp*", "assets*"]

[tool.uv]
# uv specific configurations can be added here
