[project]
name = "my-aibox"
version = "3.2.8"
description = "MyAIBOX(AI百宝箱) - A comprehensive Gen-AI application suite built with FastAPI and Gradio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Fundamental
    "fastapi>=0.100.0",
    "gradio>=6.2.0",
    "gradio_pdf>=0.0.22",
    "boto3>=1.28.0",
    "google-genai>=1.7.0",
    "openai>=1.0.0",
    # Strands Agents
    "strands-agents>=1.20.0",
    "strands-agents-tools>=0.1.7",
    # Utilities
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.1.2",
    "cachetools>=5.3.0",
    "aiohttp>=3.8.5",
    "wikipedia>=1.4.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.6.0",
    "ag-ui-protocol>=0.1.13",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
my-aibox = "common.cli:main"

[tool.setuptools.packages.find]
include = ["core*", "genai*", "webui*", "common*", "utils*"]
exclude = ["tests*", "logs*", "tmp*", "assets*", ".deprecated*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
exclude = [".deprecated"]

[tool.ruff.lint]
ignore = ["E402", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real external services (AWS, LLMs, Wikipedia). Excluded by default.",
]
